frontend: fix spacing of account action buttons on small screen
Buttons did not align with the edge of the content area and could
be squeezed together without and padding between the buttons on
mobile.

--- a/frontends/web/src/routes/account/account.module.css
+++ b/frontends/web/src/routes/account/account.module.css
@@ -120,8 +120,6 @@
     .actionsContainer {
         justify-content: space-between;
         margin-bottom: var(--space-default);
-        margin-left: auto;
-        margin-right: auto;
         padding-bottom: 0;
         transform: none;
         width: 100%;
@@ -146,8 +144,6 @@
 
     .actionsContainer a {
         flex: 1 0 30%;
-        margin-left: 0;
-        margin-right: 0;
         max-width: 30%;
         min-width: unset;
     }
@@ -159,5 +155,13 @@
         font-size: var(--size-small);
         margin-bottom: 0;
         width: auto;
+    }
+
+
+    .exchange:first-child,
+    .send:first-child,
+    .receive:first-child,
+    .walletConnect:first-child {
+        margin-left: 0;
     }
 }
